--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </style>
 
 
-<link rel="stylesheet" href="./css/main.css">
+<link rel="stylesheet" href="https://li-pie.github.io/css/main.css">
 
 
 
@@ -133,7 +133,7 @@
     <div class="intro">
         
         <h1>하루개발</h1>
-        <h2>Dev Daily Log with le-pie</h2>
+        <h2>Dev Daily Log with with le-pie</h2>
         
     </div>
 </main>
